# projection_ws

./: .gitignore  README.md  control_panel_pyqt.py  projection.desktop  run_panel.sh
configs/: Botton-mushroom.txt  Weed.txt
run/: projection.desktop  run_panel.sh
src/control_panel/: CMakeLists.txt  package.xml
src/control_panel/include/control_panel/: mainwindow.h  rosworker.h
src/control_panel/src/: main.cpp  mainwindow.cpp  rosworker.cpp
src/coord_transformer/: CMakeLists.txt  package.xml
src/coord_transformer/src/: transform_node.cpp
src/cpp_launch/: CMakeLists.txt  package.xml
src/cpp_launch/launch/: system_launch.py
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: Circle.msg
src/detect/: package.xml  setup.py
src/detect/detect/: bpu_detect_bpu_infer_lib.py  bpu_detect_hobot_dnn.py  bpu_infer_custom.py  bpu_infer_hobot.py  detect_yolov5.py  yolo_detect_node.py
src/detect11/: CMakeLists.txt  package.xml
src/detect11/include/detect11/: cpu_detect.hpp
src/detect11/src/: cpu_detect.cpp  yolo_detect_node.cpp
src/detect_yolov5_bpu/: package.xml  setup.cfg  setup.py
src/detect_yolov5_bpu/detect_yolov5_bpu/: bpu_detect_bpu_infer_lib.py  bpu_detect_hobot_dnn.py  utils.py  yolo_detect_node.py
src/detect_yolov8_11_cpu/: CMakeLists.txt  package.xml
src/detect_yolov8_11_cpu/include/detect_yolov8_11_cpu/: cpu_detect.hpp
src/detect_yolov8_11_cpu/src/: cpu_detect.cpp  yolo_detect_node.cpp
src/image_viewer/: CMakeLists.txt  package.xml
src/image_viewer/src/: image_viewer_listener.cpp  image_viewer_talker.cpp
src/object3d_msgs/: CMakeLists.txt  LICENSE  package.xml
src/object3d_msgs/msg/: Object3D.msg
src/qt_gui_demo/: CMakeLists.txt  package.xml
src/qt_gui_demo/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/segment/: CMakeLists.txt  package.xml
src/segment/include/segment/: bpu_seg_dnn.h  bpu_seg_hobot_dnn.h  yolo_engine.h  yolo_seg_common.h  yolo_seg_node.h
src/segment/src/: bpu_seg_dnn.cpp  bpu_seg_hobot_dnn.cpp  yolo_engine.cpp  yolo_seg_node.cpp
src/segment_yolov8_11_bpu/: CMakeLists.txt  package.xml
src/segment_yolov8_11_bpu/include/segment_yolov8_11_bpu/: bpu_seg_dnn.h  bpu_seg_dnn.hpp
src/segment_yolov8_11_bpu/src/: bpu_seg_dnn.cpp  yolo_seg_node.cpp
src/tf_broadcaster/: CMakeLists.txt  package.xml
src/tf_broadcaster/src/: point_tf_broadcaster.cpp  static_tf_broadcaster.cpp
src/tf_listener/: CMakeLists.txt  package.xml
src/tf_listener/src/: message_filters.cpp
src/yolo_common/: CMakeLists.txt  package.xml
src/yolo_common/include/yolo_common/: class_names.hpp  file_utils.hpp  img_proc.hpp  math_utils.hpp  ros_utils.hpp  types.hpp  visualization.hpp
