<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>segment_yolov8_11_bpu</name>
  <version>0.0.0</version>
  <description>YOLO Segmentation Node using BPU with shared common utils</description>
  <maintainer email="1158768027@qq.com">sunrise</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>dnn_node</depend>
  <depend>opencv2</depend>
  <depend>image_transport</depend>
  <depend>ament_index_cpp</depend>
  <depend>object3d_msgs</depend>
  <depend>message_filters</depend>
  <depend>yolo_common</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>